# ataraxis-communication-interface

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  tox.ini  work_script.py
docs/source/: api.rst  conf.py  welcome.rst
envs/: axci_dev_lin.yml  axci_dev_lin_spec.txt  axci_dev_osx.yml  axci_dev_osx_spec.txt  axci_dev_win.yml  axci_dev_win_spec.txt
examples/: example_interface.py  example_runtime.py
src/ataraxis_communication_interface/: __init__.py  __init__.pyi  cli.py  cli.pyi  communication.py  communication.pyi  dataclasses.py  dataclasses.pyi  extraction_config.py  log_processing.py  log_processing.pyi  manifest.py  mcp_server.py  mcp_server.pyi  microcontroller_interface.py  microcontroller_interface.pyi  transport_layer.pyi
src/ataraxis_communication_interface/communication/: __init__.py  __init__.pyi  messages.py  messages.pyi  mqtt.py  mqtt.pyi  protocols.py  protocols.pyi  serial.py  serial.pyi
src/ataraxis_communication_interface/interfaces/: cli.py  cli.pyi  config_tools.py  config_tools.pyi  discovery_tools.py  discovery_tools.pyi  mcp_execution.py  mcp_execution.pyi  mcp_instance.py  mcp_instance.pyi  mcp_server.py  mcp_server.pyi  output_tools.py  output_tools.pyi  processing_tools.py  processing_tools.pyi
src/ataraxis_communication_interface/microcontroller/: __init__.py  __init__.pyi  dataclasses.py  dataclasses.pyi  interface.py  interface.pyi  log_processing.py  log_processing.pyi
src/ataraxis_transport_layer/: __init__.py
tests/: communication_test.py  dataclasses_test.py  log_processing_test.py
